--- a/_data/defaults.yml
+++ b/_data/defaults.yml
@@ -1,4 +1,4 @@
 home:
-  heading: "your awesome title"
-  subheading: "your awesome subheading"
+  heading: "Joy Wanjiku Kangangi"
+  subheading: "My Portfolio" 
   banner: "your awesome url"
